# clang-find-decl

./: CMakeLists.txt  FindDecls.cpp  Readme.md  RoseFindDecls.cpp  compile_commands2.json  output.csv  rose_output.csv  sort.py  sorted_output.csv  sorted_rose_output.csv  test.sh
test/: compile_commands.json  enum1.c  enum2.c
